--- a/templates/a_rtchat/chat.html
+++ b/templates/a_rtchat/chat.html
@@ -5,7 +5,8 @@
 <wrapper class="block max-w-2xl mx-auto my-10 px-6">
     <div id="chat_window" class="h-[45rem] flex flex-col bg-gray-800 rounded-2xl shadow-2xl relative p-1">
         <div class="flex justify-center text-emerald-400 bg-gray-800 p-2 sticky top-0 z-10">
-            <span id="online-count" class="pr-1">3</span>online
+            <div id="online-icon"></div>
+            <span id="online-count" class="pr-1"></span>online
         </div>
         <div id='chat_container' class="overflow-y-auto grow">
             <ul id='chat_messages' class="flex flex-col justify-end gap-2 p-4">
@@ -20,7 +21,12 @@
                     hx-ext="ws"
                     ws-connect="/ws/chatroom/public-chat"
                     ws-send
-                    _="on htmx:afterRequest reset() me">
+                    _="on htmx:wsAfterSend reset() me console.log('Message sent')
+                    on htmx:wsConnecting console.log('Connecting...')
+                    on htmx:wsConnected console.log('Connected!')
+                    on htmx:wsSend console.log('Message sent')
+                    on htmx:wsError console.log('Error:', event.detail.error)"
+                    >
                     {% csrf_token %}
                     {{form}}
                 </form>
@@ -34,12 +40,10 @@
 
 {% block javascript %}
 <script>
-
     function scrollToBottom() {
         const container = document.getElementById('chat_container');
         container.scrollTop = container.scrollHeight;
     }
     scrollToBottom()
-
 </script>
 {% endblock %}
