--- a/a_users/templates/a_users/profile.html
+++ b/a_users/templates/a_users/profile.html
@@ -13,4 +13,11 @@
     </div>
 </div>
 
+<script>
+    const ws = new WebSocket('wss://localhost:8000/ws/test/');
+ws.onopen = () => console.log('Connected!');
+ws.onmessage = (e) => console.log('Received:', e.data);
+ws.onerror = (e) => console.log('Error:', e);
+ws.onclose = () => console.log('Closed');
+</script>
 {% endblock %}
