--- a/a_users/templates/a_users/profile.html
+++ b/a_users/templates/a_users/profile.html
@@ -14,10 +14,10 @@
 </div>
 
 <script>
-    const ws = new WebSocket('wss://chat.lazyalgo.com/ws/test/');
-ws.onopen = () => console.log('Connected!');
-ws.onmessage = (e) => console.log('Received:', e.data);
-ws.onerror = (e) => console.log('Error:', e);
-ws.onclose = () => console.log('Closed');
+    const ws = new WebSocket('/ws/test/');
+    ws.onopen = () => console.log('Connected!');
+    ws.onmessage = (e) => console.log('Received:', e.data);
+    ws.onerror = (e) => console.log('Error:', e);
+    ws.onclose = () => console.log('Closed');
 </script>
 {% endblock %}
