private conversation and header chat name sadded

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,25 @@
         .allauth .helptext {
             @apply block mt-4
         }
+        .alert-info {
+            @apply bg-blue-300
+        }
+        .alert-success {
+            @apply bg-green-400
+        }
+        .alert-warning {
+            @apply bg-amber-400
+        }
+        .alert-danger {
+            @apply bg-amber-500
+        }
+        .green-dot {
+            @apply rounded-full bg-green-500 p-1.5
+        }
+        .graylight-dot {
+            @apply rounded-full bg-gray-300 p-1.5
+        }
+        
         label {
             @apply hidden
         }
