--- a/templates/a_rtchat/chat_message.html
+++ b/templates/a_rtchat/chat_message.html
@@ -1,7 +1,8 @@
 {% if message.author == user %}
     <li class="flex justify-end mb-4">
         <div class="bg-green-200 rounded-l-lg rounded-tr-lg p-4 max-w-[75%]">
-            <span>{{message.body}}</span>
+            <span>{{message.body}}</span><br>
+            <span class="text-sm text-gray-500">{{message.created | time}}</span>
         </div>
         <div class="flex items-end">
             <svg height="13" width="8" >
@@ -23,7 +24,8 @@
                 </svg>
             </div>
             <div class="bg-white p-4 max-w-[75%] rounded-r-lg rounded-tl-lg">
-                <span>{{message.body}}</span>
+                <span>{{message.body}}</span><br>
+                <span class="text-sm text-gray-500">{{message.created | time}}</span>
             </div>  
         </div>
         <div class="text-sm font-light py-1 ml-10">
