--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Chat in real time!">
     <title>Lazy Chat</title>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-    <script src="https://unpkg.com/htmx.org@2.0.2"></script>
+    <script src="{% static 'js/cdn.min.js' %}" defer></script>
+    <script src="{% static 'js/htmx.min.js' %}"></script>
     {% django_htmx_script %}
-    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
+    <script src="{% static 'js/hyperscript.min.js' %}"></script>
+    <script src="{% static 'js/tailwind.js' %}"></script>
+    <script src="{% static 'js/ws.js' %}"></script>
     <style type="text/tailwindcss">
         [x-cloak] { 
             display: none !important; 
